confirmed image path. changed config path to add a slash

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: GSA ePANDDA 
 email: jonathan.lauters@gmail.com 
 description: #coment
-baseurl: "/gsa_epandda" # the subpath of your site, e.g. /blog
+baseurl: "/gsa_epandda/" # the subpath of your site, e.g. /blog
 url: "http://jonlauters.com" # the base hostname & protocol for your site
 twitter_username: ""
 github_username:  ""
